istio/comments/istio/virtual-service-weighted.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: comments
  namespace: default
spec:
  hosts:
    - comments.default.svc.cluster.local
  http:
    - route:
      - destination:
          host: comments.default.svc.cluster.local # interpreted as 'comments.default.svc.cluster.local'
          subset: v1     # subset is defined in destination rule
        weight: 50

      - destination:
          host: comments.default.svc.cluster.local # interpreted as 'comments.default.svc.cluster.local'
          subset: v2     # subset is defined in destination rule
        weight: 50

      timeout: 1s        # request timeout is set to 2 seconds
