istio/comments/istio/virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: comments
  namespace: default
spec:
  hosts:
    - comments.default.svc.cluster.local
  http:
    - route:             # route all traffic to comments v1
      - destination:
          host: comments.default.svc.cluster.local # interpreted as 'comments.default.svc.cluster.local'
          subset: v1     # subset is defined in destination rule
